[gd_scene load_steps=3 format=3 uid="uid://ch5m2ij4y6qpo"]

[ext_resource type="Script" uid="uid://bnga63kx24ag" path="res://scripts/Menu Scripts/Escolha de Materias.gd" id="1_x4as8"]
[ext_resource type="Script" uid="uid://eao0n0bq6xcr" path="res://scenes/Menu Scenes/Botoes.gd" id="2_qntck"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
script = ExtResource("1_x4as8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -120.5
offset_right = 74.0
offset_bottom = 120.5
grow_horizontal = 2
grow_vertical = 2

[node name="Português" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Português"

[node name="Artes" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Artes"

[node name="Ciências" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Ciências"

[node name="Educação Física" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Educação Física"

[node name="Geografia" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Geografia:"

[node name="História" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "História"

[node name="Matemática" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Matemática"

[node name="Continuar" type="Button" parent="."]
layout_mode = 0
offset_left = 524.0
offset_top = 468.0
offset_right = 610.0
offset_bottom = 499.0
text = "Continuar"
script = ExtResource("2_qntck")

[node name="Voltar" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 4.0
offset_right = 88.0
offset_bottom = 54.0
text = "Voltar"
script = ExtResource("2_qntck")

[connection signal="toggled" from="VBoxContainer/Português" to="." method="_on_português_toggled"]
[connection signal="toggled" from="VBoxContainer/Artes" to="." method="_on_artes_toggled"]
[connection signal="pressed" from="Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
